--- a/package.json
+++ b/package.json
@@ -2,8 +2,20 @@
   "name": "is-dom-node",
   "version": "1.0.0",
   "description": "TypeScript helper functions to narrow the type of object to a Node descendant",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
+    "changelog": "gren changelog --override --generate --head master",
+    "lint": "eslint --ext .ts \"**/*.ts\" --cache && npm run prettier-check",
+    "lint:fix": "eslint --ext .ts --fix src && npm run prettier-format",
+    "prepare": "tsc",
+    "prettier-check": "prettier --config .prettierrc.json --check .",
+    "prettier-format": "prettier --config .prettierrc.json --write .",
+    "prerelease": "git clean -xfd && npm ci && npm run lint && npm test && npm run build",
+    "release": "release-it",
+    "update:major": "npx npm-check-updates -i",
+    "tsc": "tsc",
+    "update:minor": "npx npm-check-updates -i -t minor",
     "test": "npm run tsc && nyc mocha"
   },
   "repository": {
@@ -22,5 +34,34 @@
   "bugs": {
     "url": "https://github.com/xmldom/is-dom-node/issues"
   },
-  "homepage": "https://github.com/xmldom/is-dom-node#readme"
+  "homepage": "https://github.com/xmldom/is-dom-node#readme",
+  "files": [
+    "dist/"
+  ],
+  "devDependencies": {
+    "@cjbarth/github-release-notes": "^4.2.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^16.18.50",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "@xmldom/xmldom": "^0.8.10",
+    "choma": "^1.2.1",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-deprecation": "^1.5.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-packagejson": "^2.4.5",
+    "release-it": "^16.1.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">= 16"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
