--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@cjbarth/github-release-notes": "^4.2.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/jsdom": "^21.1.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^16.18.50",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
@@ -50,6 +51,7 @@
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-deprecation": "^1.5.0",
+    "jsdom": "^22.1.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^3.0.3",
