--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "changelog": "gren changelog --override --generate --head main",
-    "lint": "eslint --ext .ts \"**/*.ts\" --cache && npm run prettier-check",
-    "lint:fix": "eslint --ext .ts --fix src && npm run prettier-format",
+    "lint": "eslint \"{src,test}/*.ts\" --cache && npm run prettier-check",
+    "lint:fix": "eslint --fix \"{src,test}/*.ts\" && npm run prettier-format",
     "prepare": "tsc",
     "prettier-check": "prettier --config .prettierrc.json --check .",
     "prettier-format": "prettier --config .prettierrc.json --write .",
