--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Test Status
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches: [main]
   pull_request:
-    branches: ["main"]
+    branches: [main]
 
 jobs:
   test:
@@ -35,10 +35,10 @@ jobs:
       - run: npm update
       - run: npm ci
       - run: npm test
-      # - name: Codecov
-      #   uses: codecov/codecov-action@v3.1.4
-      #   with:
-      #     verbose: true
+      - name: Codecov
+        uses: codecov/codecov-action@v3.1.4
+        with:
+          verbose: true
 
   lint:
     name: Lint Code
