Prepare for release, excluding NPM.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-dom-node",
-  "version": "1.0.0",
+  "version": ".9",
   "description": "TypeScript helper functions to narrow the type of object to a Node descendant",
   "main": "dist/index.js",
   "scripts": {
@@ -65,5 +65,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "npm": {
+    "publish": false
   }
 }
