--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-dom-node",
-  "version": ".9",
+  "version": "0.9.0",
   "description": "TypeScript helper functions to narrow the type of object to a Node descendant",
   "main": "dist/index.js",
   "scripts": {
