Use @xmldom scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "is-dom-node",
+  "name": "@xmldom/is-dom-node",
   "version": "1.0.0",
   "description": "TypeScript helper functions to narrow the type of object to a Node descendant",
   "main": "dist/index.js",
