--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "schedule:monthly"],
+  "extends": ["config:recommended", "schedule:monthly"],
   "labels": ["dependencies", "renovate"],
   "separateMajorMinor": true,
   "separateMultipleMajor": true,
