chore: Tweak renovate config (#26)
- schedule monthly
- separate minor updates from major updates and separate multiple major
versions
- group all devDependencies into a single PR

https://github.com/xmldom/is-dom-node/pull/25#issuecomment-1753812843

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,18 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"],
-  "labels": ["dependencies", "renovate"]
+  "extends": ["config:recommended", "schedule:monthly"],
+  "labels": ["dependencies", "renovate"],
+  "separateMajorMinor": true,
+  "separateMultipleMajor": true,
+  "packageRules": [
+    {
+      "matchFileNames": ["package.json"],
+      "matchDepTypes": ["devDependencies"],
+      "groupName": "all devDependencies"
+    },
+    {
+      "matchUpdateTypes": "major",
+      "dependencyDashboardApproval": true
+    }
+  ]
 }
